# V2Conf

./: .gitignore  README.md  geoip.sh  pyproject.toml
v2conf/: __init__.py  __main__.py  configs.py  exclude.py  health.py
