[tool.poetry]
name = "v2conf"
version = "0.1.1"
description = "V2Conf helps you build V2Ray Config file automatically and evaluate and change config rules based on outbounds performances."
authors = ["Mahyar Mahdavi <Mahyar@Mahyar24.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/mahyar24/V2Conf/"
repository = "https://github.com/Mahyar24/V2Conf/"
readme = "README.md"
keywords = [
    "V2Ray",
    "V2Fly",
    "X2Ray"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
aiohttp = "^3.8.3"
jdatetime = "^4.1.0"
json5kit = "^0.3.2"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"
types-requests = "^2.28.11"

[tool.poetry.scripts]
v2conf = "v2conf.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
